# kodegend-protocol-ipc

./: .gitignore  Cargo.toml  LICENSE.md  README.md  rust-toolchain.toml
assets/img/: icon.icns
src/: lib.rs
