[package]
name = "kodegend_protocol_ipc"
version = "0.10.7"
edition = "2024"
description = "Wire protocol types for kodegend IPC"
authors = ["KODEGEN.ᴀɪ"]
homepage = "https://kodegen.ai"
repository = "https://github.com/cyrup-ai/kodegend"
license = "Apache-2.0 OR MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
